--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10947,7 +10947,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../images/img/header-bg.jpg");
+  background-image: url("../images/img/logos/banniere.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
